      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-pf.html
    . New tutorial: Using Particle Filter to model a wire using polynomial interpolation
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-pf-curve-fitting.html
    . New tutorial: Rendering a 3D scene with Ogre
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-ogre.html
  - Bug fixed
    . [#1251] Bug in vpDisplay::displayFrame()
    . [#1270] Build issue around std::clamp and optional header which are not found with cxx17
      standard enabled
    . [#1272] Unable to build ViSP with PCL/VTK build from source, VTK headers are not found by ViSP
    . [#1273] Build error in visp_java without deprecated functionalities
    . [#1274] Build issue no member named clamp in namespace std
    . [#1279] Issue in vpPoseVector json serialization
    . [#1296] Unable to parse camera parameters with vpXmlParserCamera::parse() when camera name is empty
    . [#1307] Cannot set cxx standard when configuring for Visual Studio
    . [#1320] Broken links in the documentation
    . [#1337] The pose of the automatic data generation pipeline from blenderproc seems wrong
    . [#1341] SVD computation fails with Lapack when m < n
    . [#1370] encountered compilation errors while building the ViSP library
    . [#1404] Compilation error when no GUI library is available
    . [#1424] Unable to detect Yarp 3.9.0
    . [#1485] Build issue around nlohmann_json usage with VTK 9.2.0 or more recent version used as an embedded
              3rdparty by PCL
    . [#1487] Segfault with vpCannyEdgeDetection with a certain image
    . [#1494] Memory management issue in vpArray2D::resize()
    . [#1495] vpMeLine is unable to seek extremities
    . [#1519] Dataset not detected when tests are disabled
    . [#1521] Build issues with OpenCV 5.0.0
    . [#1541] servoUniversalRobotsPBVS.cpp:238:8: error: ‘class vpFeatureThetaU’ has no member